fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section h2 {
   scrollbar-width: thin;
 }
 
-.selleries-list:hover {
+.selleries-list::-webkit-scrollbar {
   overflow-x: scroll;
 }
 
